fixed mobile hover title spacing issue

--- a/css/custom.css
+++ b/css/custom.css
@@ -1223,7 +1223,8 @@ ul.sociallinks > li > a.behance:hover {
     position: absolute;
     left: 18%;
     float: left;
-}
+  }
+
 
   .section_title > h2 {
     margin: 25px 50px 0;
@@ -1254,6 +1255,10 @@ ul.sociallinks > li > a.behance:hover {
     width: 70%!important;
     max-height: 200px!important;
     margin-bottom: 60px;
+  }
+
+  .wedmela_hover_grid figure {
+    margin-bottom: 20px!important;
   }
 
   .element p{
